--- a/home.html
+++ b/home.html
@@ -182,7 +182,7 @@ h1 {
     <a href="https://discordapp.com/users/1340770003322146858">
         <button class="Discordbutton" style="font-size: 25px; background-color: blue; border-radius: 10px; border: none; color: white;"><i class="fa-brands fa-discord"></i>Discord</button>
     </a>
-    <a href="https://triker">github.com/intels
+    <a href="github.com/intels">
         <button class="Githubbutton" style="font-size: 25px; background-color: black; color: white; border-radius: 10px; border: none;"><i class="fa-brands fa-github"></i>Github</button>
     </a>
 </form>
