--- a/skill.html
+++ b/skill.html
@@ -9,6 +9,7 @@ body {
   background-size: cover;
   position: relative;
   margin: 0;
+  animation: glow 1.5s infinite alternate;
 }
 
 .logo1 {
@@ -30,6 +31,7 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   z-index: 1;
   color: white;
+  animation: fadein 4s;
 }
 
 .Homebutton {
@@ -42,9 +44,39 @@ h1 {
   right: 600px;
   top: 5px;
   z-index: 1;
-  font-size: xx-large;
+  font-size: 32px;
   background-color: transparent;
   border: none;
+  transition: 0.5s;
+  color: var(--link-color);
+  display: inline-block;
+  padding: 0 var(--link-underline-padding);
+  text-decoration: none;
+}
+
+.Homebutton:hover {
+  font-size: 38px;
+  animation: glow 1.5s infinite alternate;
+}
+
+:root {
+    --link-color: rgb(0, 0, 0);
+    --link-underline-padding: .5em;
+}
+
+.Homebutton:after {
+    background-color: var(--link-color);
+    content: '';
+    display: block;
+    height: .1em;
+    margin-left: calc(var(--link-underline-padding) * -1);
+    margin-top: .2em;
+    transition: width .5s;
+    width: 0;
+}
+
+.Homebutton:hover:after {
+    width: calc(100% + var(--link-underline-padding) * 2);
 }
 
 .aboutbutton {
@@ -57,9 +89,37 @@ h1 {
   right: 500px;
   top: 5px;
   z-index: 1;
-  font-size: xx-large;
+  font-size: 32px;
   background-color: transparent;
   border: none;
+  transition: 0.5s;
+  padding: 0 var(--link-underline-padding);
+  text-decoration: none;
+}
+
+.aboutbutton:hover {
+  font-size: 38px;
+  animation: glow 1.5s infinite alternate;
+}
+
+:root {
+    --link-color: rgb(0, 0, 0);
+    --link-underline-padding: .5em;
+}
+
+.aboutbutton:after {
+    background-color: var(--link-color);
+    content: '';
+    display: block;
+    height: .1em;
+    margin-left: calc(var(--link-underline-padding) * -1);
+    margin-top: .2em;
+    transition: width .5s;
+    width: 0;
+}
+
+.aboutbutton:hover:after {
+    width: calc(100% + var(--link-underline-padding) * 2);
 }
 
 .skillbutton {
@@ -72,9 +132,37 @@ h1 {
   right: 400px;
   top: 5px;
   z-index: 1;
-  font-size: xx-large;
+  font-size: 32px;
   background-color: transparent;
   border: none;
+  transition: 0.5s;
+  padding: 0 var(--link-underline-padding);
+  text-decoration: none;
+}
+
+.skillbutton:hover {
+  font-size: 38px;
+  animation: glow 1.5s infinite alternate;
+}
+
+:root {
+    --link-color: rgb(0, 0, 0);
+    --link-underline-padding: .5em;
+}
+
+.skillbutton:after {
+    background-color: var(--link-color);
+    content: '';
+    display: block;
+    height: .1em;
+    margin-left: calc(var(--link-underline-padding) * -1);
+    margin-top: .2em;
+    transition: width .5s;
+    width: 0;
+}
+
+.skillbutton:hover:after {
+    width: calc(100% + var(--link-underline-padding) * 2);
 }
 
 h3 {
@@ -86,9 +174,17 @@ h3 {
   font-family: Arial, Helvetica, sans-serif;
   z-index: 1;
   color: white;
+  animation: slide 3s;
 }
 
 h4 {
+  overflow: hidden; 
+  border-right: .10em solid orange;
+  letter-spacing: .15em;
+  animation:
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+  max-width: 1000px;
   position: absolute;
   top: 220px;
   left: 550px;
@@ -103,6 +199,13 @@ h4 {
 }
 
 h5 {
+  overflow: hidden; 
+  border-right: .10em solid orange;
+  letter-spacing: .15em;
+  animation:
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+  max-width: 1000px;
   position: absolute;
   top: 330px;
   left: 550px;
@@ -117,6 +220,13 @@ h5 {
 }
 
 h6 {
+  overflow: hidden; 
+  border-right: .10em solid orange;
+  letter-spacing: .15em;
+  animation:
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+  max-width: 1000px;
   position: absolute;
   top: 410px;
   left: 550px;
@@ -199,6 +309,41 @@ h6 {
   font-size: 50px;
   color: black;
 }
+
+/* Glowing affect */
+@keyframes glow {
+    0% {
+        text-shadow: 0 0 5px #00d4ff;
+    }
+    100% {
+        text-shadow: 0 0 10px #00d4ff;
+    }
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: black; }
+}
+
+/* Fading */
+@keyframes fadein {
+  from { opacity: 0}
+  to   { opacity: 1}
+}
+
+/* slideing */
+@keyframes slide {
+  0% { transform: translateX(-100%); }
+  100% { transform: translateX(0); }
+}
+
 </style>
 </head>
 <body>
